--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "expressjs": "^1.0.1",
+    "jest": "^29.3.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "node-js": "^1.0.0",
